@@ -15,13 +15,12 @@
 #include "common.h"
 
 
-static char software_version[] = "$Id: date.c,v 1.1 2003-01-09 15:17:55 freddy77 Exp $";
+static char software_version[] = "$Id: date.c,v 1.2 2003-01-09 17:12:47 freddy77 Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
-int
-main(int argc, char *argv[])
+static void
+DoTest(int n)
 {
-
 	int res;
 
 	SQLCHAR command[512];
@@ -32,8 +31,6 @@ main(int argc, char *argv[])
 	SQLSMALLINT colScale, colNullable;
 
 	TIMESTAMP_STRUCT ts;
-
-	Connect();
 
 	sprintf(command, "select convert(datetime, '2002-12-27 18:43:21')");
 	printf("%s\n", command);
@@ -58,15 +55,24 @@ main(int argc, char *argv[])
 		exit(1);
 	}
 
-	if (SQLGetData(Statement, 1, SQL_C_TIMESTAMP, &ts, sizeof(ts), &colSize) != SQL_SUCCESS) {
-		printf("Unable to get data col %d\n", 1);
-		CheckReturn();
-		exit(1);
+	if (n == 0) {
+		memset(&ts, 0, sizeof(ts));
+		if (SQLGetData(Statement, 1, SQL_C_TIMESTAMP, &ts, sizeof(ts), &colSize) != SQL_SUCCESS) {
+			printf("Unable to get data col %d\n", 1);
+			CheckReturn();
+			exit(1);
+		}
+		sprintf(output, "%04d-%02d-%02d %02d:%02d:%02d", ts.year, ts.month, ts.day, ts.hour, ts.minute, ts.second);
+	} else {
+		if (SQLGetData(Statement, 1, SQL_C_CHAR, output, sizeof(output), &colSize) != SQL_SUCCESS) {
+			printf("Unable to get data col %d\n", 1);
+			CheckReturn();
+			exit(1);
+		}
 	}
 
-	sprintf(output, "%04d-%02d-%02d", ts.year, ts.month, ts.day);
 	printf("Date returned: %s\n", output);
-	if (strcmp(output, "2002-12-27") != 0) {
+	if (strcmp(output, "2002-12-27 18:43:21") != 0) {
 		printf("Invalid returned date\n");
 		exit(1);
 	}
@@ -84,6 +90,15 @@ main(int argc, char *argv[])
 		CheckReturn();
 		exit(1);
 	}
+}
+
+int
+main(int argc, char *argv[])
+{
+	Connect();
+
+	DoTest(0);
+	DoTest(1);
 
 	Disconnect();
 
